[tool.poetry]
name = "rfind-sigmf-explorer"
version = "0.1.0"
description = ""
authors = ["Nicholas Bruce <nsbruce@uvic.ca>"]
readme = "README.md"
packages = [{include = "rfind_sigmf_explorer"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<4"
numpy = "^1.24.3"
SigMF = "^1.1.1"
plotly = "^5.14.1"
xarray = "^2023.4.2"
datashader = "^0.14.4"
holoviews = "^1.16.0"
matplotlib = "^3.7.1"
hvplot = "^0.8.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
poethepoet = "^0.20.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
waterfall = 'rfind_sigmf_explorer.scripts.waterfall:main'

[tool.black]
target-version = ["py311"]
preview="True"

[tool.isort]
profile="black"
skip=['.venv.']

[tool.mypy]
python_version = 3.11

[tool.pytest.ini_options]
testpaths = "tests"

[tool.poe.tasks]

    [tool.poe.tasks.test]
    cmd = "pytest"
    help = 'Run tests'

    [tool.poe.tasks.sort]
    cmd = "isort ."
    help = "Run isort (sort imports alphabetically)"

    [tool.poe.tasks.blacken]
    cmd = "black ."
    help = "Run black (format code)"

    [tool.poe.tasks.mypyify]
    cmd = "mypy ."
    help = "Run mypy (type check)"

    [tool.poe.tasks.flake8ify]
    cmd = "flake8 ."
    help = "Run flake8 (lint code)"

    [tool.poe.tasks.format]
    sequence = ["sort", "blacken"]
    help = "Run isort and black (format code)"

    [tool.poe.tasks.lint]
    sequence = ["mypyify", "flake8ify"]
    help = "Run mypy and flake8 (lint code)"